# ChangeLog for app-office/dia
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.156 2013/09/22 11:21:59 pacho Exp $

*dia-0.97.2-r2 (22 Sep 2013)

  22 Sep 2013; Pacho Ramos <pacho@gentoo.org> +dia-0.97.2-r2.ebuild,
  +files/dia-0.97.2-glib2.36.patch,
  +files/dia-0.97.2-implicit-declaration.patch:
  Migrate to new python eclasses, improve desktop file translations, drop
  unneeded libgnome* deps, let it compile with latest automake, don't mess with
  localedir, fix glib-2.36 compat, apply upstream patch to fix some warnings.

  05 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> -dia-0.97.1.ebuild,
  -files/dia-0.97.1-libpng15.patch, -dia-0.97.2.ebuild,
  -files/dia-0.97-acinclude-python-fixes.patch:
  Clean up old revisions.

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> dia-0.97.2-r1.ebuild:
  ia64/sparc stable wrt #427544

  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org> dia-0.97.2-r1.ebuild:
  stable ppc, bug #427544

  16 Oct 2012; Matt Turner <mattst88@gentoo.org> dia-0.97.2-r1.ebuild:
  Stable on alpha, bug 427544.

  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> dia-0.97.2-r1.ebuild:
  stable ppc64, bug #427544

  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> dia-0.97.2-r1.ebuild:
  Stable for amd64, wrt bug #427544

  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> dia-0.97.2-r1.ebuild:
  x86 stable wrt bug #427544

  02 Oct 2012; Jeroen Roovers <jer@gentoo.org> dia-0.97.2-r1.ebuild:
  Stable for HPPA (bug #427544).

  15 Jul 2012; Raúl Porcel <armin76@gentoo.org> dia-0.97.2.ebuild:
  alpha/ia64/sparc stable wrt #410611

  07 Jul 2012; Michał Górny <mgorny@gentoo.org>
  +files/dia-0.97.2-underlinking.patch, dia-0.97.2-r1.ebuild:
  Fix underlinking (bug #420685). Also remove intltoolize call which is
  redundant with newer eautoreconf.

  09 Jun 2012; Justin Lecher <jlec@gentoo.org> dia-0.97.2-r1.ebuild:
  Prefix fix
