@@ -8,13 +8,13 @@ AUX dia-0.97.2-implicit-declaration.patch 857 SHA256 4bd8958bb5e8a80b99905fb205d
 AUX dia-0.97.2-underlinking.patch 1024 SHA256 3b5cbe564c9a48453e4300b89fa24de7454268b388a56036afe187c56e46c951 SHA512 d45eb49c39227e9f11ce999083de0a83c60bfac2a5db2403e4bf083c275efdef6bd1adca678712253ec53f7b3d22a5c23f6f886839c32e6cb07a93c001f45e2e WHIRLPOOL 90ea84704a2a3f14730d54044075cae6339c5f21d1fff00567f0c9834bdeae187c83f4eedc7ae7839f0cccecc2caca7ca133968e914ab79333c3005e431c70a5
 DIST dia-0.97.2.tar.xz 5507004 SHA256 a761478fb98697f71b00d3041d7c267f3db4b94fe33ac07c689cb89c4fe5eae1 SHA512 493510d038213a50141998e2af29ddcc5e98495c287417dcb6a0880b4e16cad8f1b47d0948e0a5727d88d5640664e8b28d4af3f219dd0343069aaa9895d945ba WHIRLPOOL 600f7f7d8c5707a4b0174fce6db1bdbb48b77ba6390b6c659708f4e10d0e5b33f265e1edfb6dc8e982e39a8d7a72d2645d747b4043ea79544a6812325a8e8f33
 EBUILD dia-0.97.2-r1.ebuild 2747 SHA256 bb7de361bcdd12850e2e041d91c3d106bbb85b49565736030b8aefc74659e339 SHA512 1dd596e9f246dd5e9dc7895be5e2f253cfe12cf9951ad2f6a022ed5cc4e0df5606c0050d3ade1ce8e4f8c676b3c968383a7f6336f59aa947fa5deae7ff440d7f WHIRLPOOL f5c636b24b9f8624fb7964dc28134022eca1c54e9aac3fb7ffa2ab0842c0ed9fcdb41994c920c0816afe11e49a77ed4be47e3b2f60452967eaeed275c97a0a6f
-EBUILD dia-0.97.2-r2.ebuild 2765 SHA256 cfd62ba789c224462c1bd06aa66cd6d44c17388565b4a7fbccbe87402b42009c SHA512 06fc7ba56d0f1a21091090a0bfce6cb9ab2cb00db255bfae6142bf3736effcff46f5d65af1a0d17552670ec9af0b60675386470f9e32a32e8e0c1b82cf6a0407 WHIRLPOOL c96ceb81d72b25f1ebad0d793017411738a9a8fd7f203afd383a21c19cc98cb8694b943a29f3ea11de6b9ca4dae8895342745e7c34be297c0c763cc699834986
-MISC ChangeLog 20795 SHA256 1ad51d61a7517c479bc29e53553a5c7b39bbc86ecaba9bcaae9c972825d86539 SHA512 694f82c2b6ad4554f094d4d3abe3837c20f5f6f59ddf3e3a6be225af71a177b64525ff2be7fb843d2526f52b3bb7b7408c42a171a93c91bee33e7d57e21adfe4 WHIRLPOOL 5b8d8b1aa86824520cba5e3f56a4b8209f87cac4024378e2e146bc6b55462032454a5ca0ce7ed12a4fbd170bfa70407d4416ff2a911cabaac16752edcc9731ba
+EBUILD dia-0.97.2-r2.ebuild 2890 SHA256 bdc6c649d2a0ade5a68128fa997ddde1c6c125f8a6f1df41d00e14f9e3be8b05 SHA512 f5e655ddab428d764d734fd12c41945bb25ef0ed72a35a648288e1a960392a32d7b54c051c08c32ca7fa6826ea0ee71b0d07883bf2e0ce880fe12dc97c3a89e2 WHIRLPOOL c0e0d966906fe349d519760767d799788f0ce9bef84fbf40ecbe5d4dc1346e0cc31eb99e840ff1ab3b6ca2f5d751755199beca4d04c48c4528f2020ddf047aac
+MISC ChangeLog 20948 SHA256 f24a264abadce352dee438d2932e640d09527db0eb297dcb8ad4540d3e36b4b6 SHA512 399f3b064eb6e2d70bf89bcf2cc5ee2b1b0f6df30a9776e0775b88ac39f60494ae47833d9fbd86b611376bf59a9f6ff69891e6417f40b32048393182f0d00482 WHIRLPOOL 0f43be855c95a7c6342bfc78108250f9227a86dbfcd4389d9ba1354743a2825c7e95fa47c013aa49780888fd4eadf7f3abc3ed81ff35b06056f3cf5e569f4551
 MISC metadata.xml 578 SHA256 9f701216a4674db9adcda07b71c272954d60cbb8764e09052db999436287766c SHA512 bc6988cb36508fde98810d60e99975bb626bf5f1d938bc289e010a2268da5a044c674bd0b626609358bd98c2e23ea91c1ca678e6ab181645fe4de1d610e0325f WHIRLPOOL d8827938a36ccf7fb2cbde3d0e9134c111e8bf9ab7640942e212964a6be51ff66da905017393ebcfb1a507e9c12be6425f323115d32f2bc6bbc93546a28ba26a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlI+0tgACgkQCaWpQKGI+9T+3gCfTHOCCW6IWxfKr7mZ2qX37OlS
-LqMAniz4qEabkFayRGqpcKJDrfGOuyc0
-=YqyS
+iEYEAREIAAYFAlI/X1sACgkQCaWpQKGI+9QlQgCeK60zWOzzl8DFYQL7uzaSznBU
+EDsAn0th0iU8F0SMV1j3aR/ut+DTmMkj
+=lXrD
 -----END PGP SIGNATURE-----
