@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/dia/dia-0.97.2-r2.ebuild,v 1.1 2013/09/22 11:21:59 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/dia/dia-0.97.2-r2.ebuild,v 1.2 2013/09/22 21:21:29 pacho Exp $
 
 EAPI=5
 GCONF_DEBUG=yes
@@ -79,10 +79,12 @@ src_prepare() {
 
 src_configure() {
 	# --exec-prefix makes Python look for modules in the Prefix
+	# --enable-gnome only adds support for deprecated stuff, bug #442294
+	# https://bugzilla.redhat.com/show_bug.cgi?id=996759
 	gnome2_src_configure \
 		--exec-prefix=${EPREFIX}/usr \
 		--docdir=${EPREFIX}/usr/share/doc/${PF} \
-		--enable-gnome \
+		--disable-gnome \
 		--disable-libemf \
 		$(use_enable doc db2html) \
 		$(use_with cairo) \
