@@ -1,6 +1,10 @@
 # ChangeLog for app-office/dia
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.156 2013/09/22 11:21:59 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.157 2013/09/22 21:21:29 pacho Exp $
+
+  22 Sep 2013; Pacho Ramos <pacho@gentoo.org> dia-0.97.2-r2.ebuild:
+  --enable-gnome only adds support for deprecated stuff, bugs #442294 and
+  #485668
 
 *dia-0.97.2-r2 (22 Sep 2013)
 
